--- a/style.css
+++ b/style.css
@@ -313,3 +313,110 @@ nav{
         width: 100% !important;
     }
 }
+/* @media(max-width:500px)
+{
+    .work-2{
+        display: block;
+    }
+}
+@media(max-width:500px)
+{
+    .work-3{
+      display: block;
+    }
+}
+@media(max-width:500px)
+{
+    .work-4{
+       display: block;
+    }
+} */
+@media(max-width:500px){
+    .contact-2{
+        width: 100%;
+    }
+}
+@media(max-width:500px){
+    .contact-4{
+        display: grid;
+    }
+    .main-box-input{
+        display: grid;
+       
+
+    }
+    .min-box-contact-1{
+        width:50%;
+       
+      
+        
+    }
+    .box-inpute-1 {
+        width: 40%;
+    }
+    .box-inpute-2 {
+        width: 40%;
+    }
+
+    .min-box-contact-2{
+        width: 50%;
+        display: grid;
+    }
+    .box-inpute-3{
+        width: 40%;
+    }
+    .box-inpute-4 {
+        width: 40%;
+    }
+   .min-box-contact-3
+   {
+    width: 100%;
+    padding: 0;
+   }
+   .min-box-contact-4{
+    margin-left: 0;
+   }   
+}
+
+
+.menu-icon {
+    display: inline-block;
+    cursor: pointer;
+    width: 30px;
+    height: 20px;
+  }
+  
+  .bar {
+    display: block;
+    width: 100%;
+    height: 3px;
+    background-color: black;
+    margin-bottom: 5px;
+  }
+  
+  @media(max-width:1154px)
+  {
+    .menu-icon{
+        display: none;
+    }
+  }
+  
+  @media(max-width:500px)
+  {
+    .menu-icon{
+        display: block;
+        margin-top: 20px;
+        margin-right: 20px;
+    }
+    
+
+
+  }
+  @media(max-width:500px)
+  {
+    .box{
+        display: none;
+    }
+  }
+
+  
